fetch user formated

--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,7 @@ th {
   --noir: rgb(2, 2, 3);
   --rouge: rgb(255, 1, 1);
   --gris-d3: rgb(40, 45, 48);
+  --gris-leger: rgb(251, 251, 251);
   --font-default: "Roboto", Arial, Helvetica, sans-serif;
 }
 
