--- a/src/components/top-nav/index.css
+++ b/src/components/top-nav/index.css
@@ -37,4 +37,11 @@
   font-size: 24px;
   font-weight: 500;
   line-height: 24px;
+  color: #fff;
+}
+
+.topnav-list-item a,
+.topnav-list-item a:hover,
+.topnav-list-item a:visited {
+  color: #fff;
 }
