--- a/src/components/graph-container/index.css
+++ b/src/components/graph-container/index.css
@@ -19,11 +19,34 @@
   grid-template-rows: 1fr 1fr;
 }
 
+.custom-tooltip {
+  padding: 10px;
+}
+
 .graphcontainer-activite {
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: var(--gris-leger);
+}
+
+.custom-tooltip-activite {
+  background-color: var(--rouge);
+  color: #fff;
+  font-family: Roboto;
+  font-size: clamp(0.4rem, 0.8vw, 1.5rem);
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: center;
+}
+
+.recharts-layer,
+.recharts-bar-rectangle,
+.recharts-rectangle {
+  border: solid 1px transparent !important;
+  border-top-left-radius: 50% !important;
+  border-top-right-radius: 50% !important;
 }
 
 .graphcontainer-group-d3 {
@@ -65,10 +88,15 @@
   color: rgb(255, 128, 128);
 }
 
-.custom-tooltip {
-  padding: 10px;
+.custom-tooltip-session {
   background-color: #fff;
   color: #000;
+  font-family: Roboto;
+  font-size: clamp(0.5rem, 0.8vw, 1.5rem);
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: center;
 }
 
 .graphcontainer-hexagone {
