--- a/src/components/graph-container/index.css
+++ b/src/components/graph-container/index.css
@@ -1,44 +1,36 @@
 .graphcontainer-container {
-  min-height: 70vh;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  /*
-  grid-template-areas:
-    "quotidien quotidien quotidien alimentation"
-    "quotidien quotidien quotidien alimentation"
-    "session radar score alimentation"
-    "session radar score alimentation";
-    */
-
-  /*background-color: aqua;*/
-  gap: 30px;
+	min-height: 70vh;
+	display: grid;
+	grid-template-columns: 3fr 1fr;
+	gap: 30px;
 }
 
 .graphcontainer-group {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
+	display: grid;
+	grid-template-rows: 1fr 1fr;
 }
 
 .custom-tooltip {
-  padding: 10px;
+	padding: 10px;
 }
 
 .graphcontainer-activite {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--gris-leger);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--gris-leger);
 }
 
 .custom-tooltip-activite {
-  background-color: var(--rouge);
-  color: #fff;
-  font-family: Roboto;
-  font-size: clamp(0.4rem, 0.8vw, 1.5rem);
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0px;
-  text-align: center;
+	background-color: var(--rouge);
+	color: #fff;
+	font-family: Roboto;
+	font-size: clamp(0.4rem, 0.8vw, 1.5rem);
+	font-weight: 500;
+	line-height: 24px;
+	letter-spacing: 0px;
+	text-align: center;
 }
 /*
 .recharts-layer,
@@ -48,107 +40,117 @@
 }*/
 
 .graphcontainer-group-d3 {
-  /*background-color: chartreuse;*/
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: space-between;
+	/*background-color: chartreuse;*/
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+	justify-content: space-evenly;
 }
 
 .graphcontainer-group-d3-item {
-  width: 265px;
-  height: 265px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--gris-leger);
-  box-shadow: 0px 2px 4px 0px #00000005;
-  border-radius: 10px;
-  aspect-ratio: 1 / 1;
+	width: 265px;
+	height: 265px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--gris-leger);
+	box-shadow: 0px 2px 4px 0px #00000005;
+	border-radius: 10px;
+	aspect-ratio: 1 / 1;
 }
 
 .graphcontainer-duree {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
 
-  background: linear-gradient(
-    to right,
-    var(--c-debut),
-    var(--c-debut) var(--separation),
-    var(--c-fin) var(--separation),
-    var(--c-fin)
-  );
+	background: linear-gradient(
+		to right,
+		var(--c-debut),
+		var(--c-debut) var(--separation),
+		var(--c-fin) var(--separation),
+		var(--c-fin)
+	);
 }
 
 .graphcontainer-duree-title {
-  color: rgb(255, 128, 128);
+	color: rgb(255, 128, 128);
 }
 
 .custom-tooltip-session {
-  background-color: #fff;
-  color: #000;
-  font-family: Roboto;
-  font-size: clamp(0.5rem, 0.8vw, 1.5rem);
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0px;
-  text-align: center;
+	background-color: #fff;
+	color: #000;
+	font-family: Roboto;
+	font-size: clamp(0.5rem, 0.8vw, 1.5rem);
+	font-weight: 500;
+	line-height: 24px;
+	letter-spacing: 0px;
+	text-align: center;
 }
 
 .graphcontainer-hexagone {
-  background-color: var(--gris-d3);
-  color: #fff;
+	background-color: var(--gris-d3);
+	color: #fff;
 }
 
+.recharts-text {
+	fill: #fff;
+}
+
+.recharts-polar-grid-concentric-polygon {
+	stroke: #fff;
+}
+
+.angleAxis,
+.recharts-layer,
 line {
-  color: #fff;
+	stroke: transparent;
+	fill: transparent;
 }
 
-.graphcontainer-group-alimentation {
-  width: 260px;
-  height: 100%;
-  min-height: 60vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+.activite-header {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	margin-bottom: 30px;
 }
 
-.graphcontainer-group-alimentation-item {
-  width: 100%;
-  min-height: 125px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-
-  background-color: var(--gris-leger);
+.activite-title {
+	font-family: Roboto;
+	font-size: 15px;
+	font-weight: 500;
+	line-height: 24px;
+	letter-spacing: 0px;
+	text-align: left;
+}
+.legend {
+	list-style-type: disc;
+	display: flex;
+	gap: 40px;
+	font-size: 32px;
+}
+.legend-kg {
+	color: red;
+}
+.legend-kcal {
+	color: black;
+}
+.legend-txt {
+	color: black;
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 24px;
+	letter-spacing: 0px;
+	text-align: left;
 }
 
-.txt-gras {
-  font-family: Roboto;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 24px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: #282d30;
-}
-
-.txt-alimentation {
-  font-family: Roboto;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: #74798c;
-  /*
-font-family: Roboto;
-font-size: 20px;
-font-weight: 700;
-line-height: 24px;
-letter-spacing: 0px;
-text-align: left;*/
+@media screen and (max-width: 1300px) {
+	.graphcontainer-container {
+		grid-template-columns: 1fr;
+		grid-template-rows: 2fr 1fr;
+		gap: 20px;
+	}
 }
