--- a/src/components/left-nav/index.css
+++ b/src/components/left-nav/index.css
@@ -1,37 +1,38 @@
 .leftnav-container {
-  height: 100%;
-  max-width: 117px;
-  min-height: calc(100vh - 90px);
+	height: 100%;
+	max-width: 117px;
+	min-height: calc(100vh - 90px);
 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .leftnav-list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  min-height: calc(100vh - 90px);
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	min-height: calc(100vh - 90px);
 }
 
 .leftnav-copy {
-  position: absolute;
-  left: -15px;
-  bottom: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	position: absolute;
+	left: -15px;
+	bottom: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-  transform: rotate(-90deg);
-  text-align: right;
-  white-space: nowrap;
+	transform: rotate(-90deg);
+	text-align: right;
+	white-space: nowrap;
 
-  background-color: var(--noir);
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 24px;
+	background-color: var(--noir);
+	font-size: 12px;
+	font-weight: 500;
+	line-height: 24px;
 }
